<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="ballot_logo_description">Ballot logo</string>
    <string name="upcoming_elections_button">UpComing Elections</string>
    <string name="find_representative_button">Find My Representative</string>
    <string name="use_my_location_button">Use My Location</string>
    <string name="my_representatives_title">My Representatives</string>
    <string name="saved_elections_title">Saved Elections</string>
    <string name="upcoming_elections_title">Upcoming Elections</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="election_information">Election Information</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip</string>
    <string name="profile_image">Profile Image</string>
    <string name="representative_search">Representative Search</string>
    <string name="not_found_voter">Error! Not found Voter Info of selected election</string>

</resources>
